--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,4 @@
+# 只保留大文件类型的追踪（确保这些文件确实超过25MB，小文件不需要）
 *.gif filter=lfs diff=lfs merge=lfs -text
-*html filter=lfs diff=lfs merge=lfs -text
-*mp3 filter=lfs diff=lfs merge=lfs -text
-*png filter=lfs diff=lfs merge=lfs -text
-*.png filter=lfs diff=lfs merge=lfs -text
 *.mp3 filter=lfs diff=lfs merge=lfs -text
-*.html filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
